--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
 
-/* @import 'react-big-calendar/lib/sass/styles';
-@import 'react-big-calendar/lib/addons/dragAndDrop/styles';  */
+.App {
+	text-align: center;
+}
