--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,17 @@
 }
 
 .links a {
-	color: white;
+	color: rgb(72, 67, 67);
 	text-decoration: none;
 }
 
-.home-page {
-	margin-top: 20px;
-	margin-right: 30px;
+.icon-color{
+	color: white
 }
 
+.profile-email a{
+	text-decoration: none;
+	font-size: 15px;
+	color: rgb(119, 113, 113);
 
-  
+}
